<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="rascu.stefan.twitchapp.controller.activity.GameActivity">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimaryDark"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            android:theme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>

    <ScrollView
        android:id="@+id/scrollViewContent"
        android:paddingTop="10dip"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/appBarLayout">

        <LinearLayout
            android:id="@+id/mainContent"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/contentImageView"
                android:layout_width="410px"
                android:layout_height="410px"
                android:layout_gravity="center_horizontal"
                android:src="@mipmap/ic_placeholder"
                android:scaleType="fitXY"/>

            <TextView
                android:id="@+id/nameTextView"
                android:textAlignment="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="5dip"
                android:textColor="@color/black"/>

            <TextView
                android:id="@+id/channelTextView"
                android:textAlignment="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="5dip"
                android:textColor="@color/black"/>

            <TextView
                android:textAlignment="center"
                android:id="@+id/viewerTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="5dip"
                android:textColor="@color/black"/>

            <TextView
                android:textAlignment="center"
                android:id="@+id/positionTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="5dip"
                android:textColor="@color/black"/>

        </LinearLayout>

    </ScrollView>

</RelativeLayout>