...
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:padding="10dp"
            android:text="Top Communities"></Button>

        <Button
            android:id="@+id/buttonTopGames"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:padding="10dp"
            android:text="Top Games"></Button>
    </LinearLayout>

</android.support.constraint.ConstraintLayout>
